Version 0.9.41dev (?? ??? ???)
  - Fixed bug 727317: Used html_to_8bits(), not html_to_8bits().
  - Fixed bug 727315: Bad SQL in send_reminders.php
  - Fixed bug 704918: functionality (logic) to admin the boss
  - Fixed bug 705871: Unnecessary rows in webcal_site_extras
  - Fixed bug 703563: catagory "None" not translated if using another language
  - Added "timebar" view that shows users hours in a timebar.
  - Fixed timezone bug 686829: displays pm instead of am for midnight events
  - Fixed timezone bug 686789: TimeZone Error when servertime is midnight
  - Fixed timezone bug 648692: Problem with Timezone Offset
  - Fixed timezone bug 688208: Date wrong in edit & view entry for TZ offsets
  - Fixed timezone bug in function read_events for a negative TZ_OFFSET
  - Fixed timezone bug in function get_entries for a negative TZ_OFFSET
    causing event to displaying on the wrong day.
  - Fixed bug 649681: Wrong date on event detail page
  - Added the ability to create 'nonuser' calendars, such as a corporate
    calendar, and assign the calendar administrator.
  - Removed html headers and common include calls from all files.  All files
    now include init.php and print the header by calling print_header. As a
    result of this cosmetic change, javascript has been moved out of the
    files and into its own file.  The file has the same name and is located
    in includes/js/ directory.
  - Updated all translation files to add sections for includes/js/ files.
  - Fixed bug where My Calendar linked to 80/443. There were duplicate
    bugs reported for this: 657172, 638642, 614080, 646225
  - Fixed bug 680793: failure descrip. and date in emails for rejected events
  - Fixed bug 677683: day.php (<? to <?php)
  - Fixed bug 647180: user_get_boss_list not LDAP aware
  - Fixed bug 575598: LDAP get_admins() group case sensitive
  - Fixed bug 575600: LDAP stripdn() is destructive
  - LDAP userlist is now sorted using ldap_sort() if PHP version is >= 4.2